# MMMX

./: .gitignore  CMakeLists.txt  README.md  build_options.h  client_main.cpp  cmakelists.txt  constants.h  defines.h  main.cpp  message_handler.h  server_main.cpp
.github/workflows/: ci.yml
Animation/: animation.cpp  animation.h  animation_enums.h  animations_holder.cpp  animations_holder.h  frame.cpp  frame.h  shared_frame.cpp  shared_frame.h
Client/: abstract_client_view.cpp  abstract_client_view.h  client_controller.cpp  client_controller.h  client_game_model.cpp  client_game_model.h  client_view.cpp  client_view.h
Client/GUI/: abstract_client_view.h  client_view.cpp  client_view.h
Client/GUI/Animations/: linear_emulator.h  spring_emulator.h
Client/GUI/GameView/: game_view.cpp  game_view.h
Client/GUI/MainMenu/: main_menu.cpp  main_menu.h
Client/GUI/SettingsWindow/: settings_window.cpp  settings_window.h
Client/KeyController/: key_controller.cpp  key_controller.h  key_names.h  key_names_unix.cpp  key_names_windows.cpp
Constants/: constants.cpp  constants.h
Controller/: abstract_controller.cpp  abstract_controller.h  base_controller.cpp  base_controller.h
Converter/: converter.cpp  converter.h
Event/: event.cpp  event.h  event_type.h  packed_event.cpp  packed_event.h
Field/: field.cpp  field.h
GUI/: abstract_client_view.h  client_view.cpp  client_view.h
GUI/Animations/: linear_emulator.h  spring_emulator.h
GUI/GameLabel/: game_label.cpp  game_label.h
GUI/GameView/: game_view.cpp  game_view.h  player_bar.cpp  player_bar.h  reloading_field.cpp  reloading_field.h  stats_table.cpp  stats_table.h  time_bar.cpp  time_bar.h
GUI/GameView/KeyController/: key_controller.cpp  key_controller.h
GUI/GameView/KillFeed/: kill_feed.cpp  kill_feed.h  kill_feed_notification.cpp  kill_feed_notification.h
GUI/GameView/PlayerBar/: player_bar.cpp  player_bar.h
GUI/GameView/ReloadingField/: reloading_field.cpp  reloading_field.h
GUI/GameView/RespawnButton/: respawn_button.cpp  respawn_button.h
GUI/GameView/StatsTable/: stats_table.h
GUI/GameView/ViewPort/: viewport.cpp  viewport.h
GUI/MainMenu/: main_menu.cpp  main_menu.h
GUI/MainMenu/PlayerSelect/: player_select.cpp  player_select.h
GUI/MainMenu/RoomsInfoList/: abstract_rooms_info_list.h  rooms_info_list.cpp  rooms_info_list.h
GUI/SettingsWindow/: settings_window.cpp  settings_window.h
GameEvent/: game_event.cpp  game_event.h
GameObject/: box.cpp  box.h  game_object.cpp  game_object.h  interpolator.cpp  interpolator.h  map_border.cpp  map_border.h  tree.cpp  tree.h
GameObject/Base/: base.h
GameObject/Building/: building.h
GameObject/Building/Mine/: mine.cpp  mine.h
GameObject/Building/Obstacle/: obstacle.cpp  obstacle.h
GameObject/Building/Spawner/: spawner.cpp  spawner.h
GameObject/Building/Store/: store.cpp  store.h
GameObject/Building/Turret/: turret.cpp  turret.h
GameObject/Bullet/: bullet.h
GameObject/Entity/: entity.h
GameObject/Entity/Creep/: creep.h
GameObject/Entity/Player/: active_bonus.cpp  active_bonus.h  inventory.h  passive_ability.cpp  passive_ability.h  player.h  skill.h  weapon.h
GameObject/Loot/: loot.cpp  loot.h
GameObject/Loot/Bonus/: bonus.cpp  bonus.h
GameObject/Loot/Item/: item.h
GameObject/MovableObject/: movable_object.cpp  movable_object.h
GameObject/MovableObject/Bullet/: bullet.cpp  bullet.h
GameObject/MovableObject/Entity/: entity.cpp  entity.h
GameObject/RectangularStaticObject/: box.cpp  box.h  rectangular_static_object.cpp  rectangular_static_object.h
GameObject/RigidBody/: intersect_checker.cpp  intersect_checker.h  intersect_constants.h  object_collision.cpp  object_collision.h  rigid_body.cpp  rigid_body.h  rigid_body_circle.cpp  rigid_body_circle.h  rigid_body_rectangle.cpp  rigid_body_rectangle.h
GameObject/Rigidbody/: rigidbody.cpp  rigidbody.h  rigidbody_circle.cpp  rigidbody_circle.h  rigidbody_rectangle.cpp  rigidbody_rectangle.h
GameObject/RoundStaticObject/: round_static_object.cpp  round_static_object.h  tree.cpp  tree.h
Hash/: hash_calculator.cpp  hash_calculator.h
Interpolator/: interpolator.cpp  interpolator.h
Math/: math.cpp  math.h
MessageHandler/: message_handler.cpp  message_handler.h
Model/: client_game_model.cpp  client_game_model.h  game_data_model.cpp  game_data_model.h  game_model.cpp  game_model.h  room_game_model.cpp  room_game_model.h  server_model.cpp  server_model.h
Painter/: painter.cpp  painter.h
PlayerData/: player_data.cpp  player_data.h
PlayerStats/: player_stats.cpp  player_stats.h
QRC/: fonts.qrc
Res/Animation/Box/: description.mmmx
Res/Animation/BoxSciFiCube/: description.mmmx
Res/Animation/BoxSciFiLong/: description.mmmx
Res/Animation/CrossbowBullet/: description.mmmx
Res/Animation/ElectricGenerator/: description.mmmx
Res/Animation/FilledBullet/: description.mmmx
Res/Animation/Garage/: description.mmmx
Res/Animation/Generator/: description.mmmx
Res/Fonts/: fonts.qrc
Res/Icons/: icons.qrc
Res/Images/: images.qrc
Res/Json/: creep_settings.json  creep_settings.qrc  weapon_settings.json  weapon_settings.qrc
Res/Stylesheet/: stylesheet.qrc  stylesheet.qss
Resources/Animation/: animation.qrc
Room/: room_controller.cpp  room_controller.h  room_game_model.cpp  room_game_model.h  room_info.h  room_settings.cpp  room_settings.h
Server/: server.cpp  server_controller.cpp  server_controller.h  server_model.cpp  server_model.h
Server/Room/: room_controller.cpp  room_controller.h  room_game_model.cpp  room_game_model.h  room_info.h  room_settings.cpp  room_settings.h
Settings/: settings.cpp  settings.h
SpringEmulator/: spring_emulator.cpp  spring_emulator.h
Weapon/: weapon.cpp  weapon.h
Weapon/AssaultRifle/: assault_rifle.cpp  assault_rifle.h
Weapon/Crossbow/: crossbow.cpp  crossbow.h
Weapon/MachineGun/: machine_gun.cpp  machine_gun.h
Weapon/Shotgun/: shotgun.cpp  shotgun.h
Weapon/WeaponConstants/: weapon_constants.h
Weapon/WeaponSettings/: weapon_settings.cpp  weapon_settings.h  weapon_settings.json
(+49 files in other folders)
